# biped-library

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  m
include/: Angle.hpp  AxisAngle.hpp  Biped.hpp  Body.hpp  Calibrator.hpp  Camera.hpp  Chain.hpp  DHFrame.hpp  Humanoid.hpp
interface/bhuman/: configurefornao  make
interface/bhuman/sysroot/include/armadillo_bits/: config.hpp
interface/bhuman/sysroot/include/ceres/internal/: config.h
interface/bhuman/sysroot/lib/: libarmadillo.so.7  libarmadillo.so.7.800.2  libceres.so.1.12.0  libgfortran.so.3.0.0  libglog.so.0.0.0  libgomp.so.1.0.0
src/: AxisAngle.cpp  Biped.cpp  Body.cpp  Calibrator.cpp  Camera.cpp  Chain.cpp  DHFrame.cpp  Humanoid.cpp  Utility.cpp  Utility.hpp
unit-test/: AngleTestSuit.h  AxisAngleTestSuite.h  BipedTestSuite.h  BodyTestSuite.h  ChainTestSuite.h  DHFrameTestSuite.h  HumanoidTestSuite.h  UtilityTestSuite.h
